--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,3 @@
-
-
-
 <!DOCTYPE html>
 
 <html lang="ko">
@@ -370,7 +367,8 @@ header .centered img.logo{ height: 46px !important; }
     // 그 외(file://, GitHub preview 등)에서는 절대 URL 사용
     return 'https://smartel.netlify.app' + REL;
   }
-
+</script>
+<script>
   /* === 서버에 PDF 생성 요청 === */
   async function generatePDFBlob() {
     const form = document.getElementById('form');
@@ -388,64 +386,33 @@ header .centered img.logo{ height: 46px !important; }
   }
 
   /* === 저장(다운로드) === */
-  async function onSavePDF(){
+  /* LEGACY_DISABLED async function onSavePDF(){
   try{
     var blob = await generatePDFBlob();
-    if(!(blob instanceof Blob)){
-      if (blob && typeof blob.blob==='function') blob = await blob.blob();
-      else if (blob && blob.arrayBuffer) blob = new Blob([await blob.arrayBuffer()], {type:'application/pdf'});
-      else blob = new Blob([blob||''], {type:'application/pdf'});
-    }
+    if(!(blob instanceof Blob)) { blob = new Blob([await (blob.arrayBuffer? blob.arrayBuffer(): blob)], {type:'application/pdf'} */); }
     var a = document.createElement('a');
     a.href = URL.createObjectURL(blob);
     a.download = 'smartel.pdf';
     document.body.appendChild(a); a.click(); a.remove();
     setTimeout(function(){ URL.revokeObjectURL(a.href); }, 600000);
-  }catch(e){
-    alert('PDF 저장 중 오류가 발생했습니다. 콘솔 로그를 확인하세요.');
-    console.error(e);
-  }
+  }catch(e){ alert('PDF 저장 중 오류가 발생했습니다. 콘솔 로그를 확인하세요.'); console.error(e); }
 }
 
   /* === 인쇄(뷰어만 열기; 시스템 인쇄창 자동 호출 없음) === */
-  async function onPrintPDF(){
+  /* LEGACY_DISABLED async function onPrintPDF(){
   try{
-    setHiddenBirth && setHiddenBirth();
-    var yy = (document.querySelector('#card_exp_year')||{}).value||'';
-    var mm = (document.querySelector('#card_exp_month')||{}).value||'';
-    var ap = document.querySelector('#autopay_exp'); if(ap && yy && mm) ap.value = yy+'/'+mm;
-    if (typeof runValidate==='function' && !runValidate()){ window.scrollTo({top:0, behavior:'smooth'}); return; }
+    setHiddenBirth();
+    var yy = (qs('#card_exp_year')||{} */).value||'';
+    var mm = (qs('#card_exp_month')||{}).value||'';
+    var apExp = qs('#autopay_exp'); if(apExp && yy && mm) apExp.value = yy+'/'+mm;
+    if(!runValidate()){ window.scrollTo({top:0, behavior:'smooth'}); return; }
     var blob = await generatePDFBlob();
-    if(!(blob instanceof Blob)){
-      if (blob && typeof blob.blob==='function') blob = await blob.blob();
-      else if (blob && blob.arrayBuffer) blob = new Blob([await blob.arrayBuffer()], {type:'application/pdf'});
-      else blob = new Blob([blob||''], {type:'application/pdf'});
-    }
+    if(!(blob instanceof Blob)) { blob = new Blob([await (blob.arrayBuffer? blob.arrayBuffer(): blob)], {type:'application/pdf'}); }
     var url = URL.createObjectURL(blob);
-    var w = window.open('', '_blank', 'noopener,noreferrer');
-    if(!w){
-      var a=document.createElement('a'); a.href=url; a.download='smartel.pdf';
-      document.body.appendChild(a); a.click(); a.remove();
-      setTimeout(function(){ URL.revokeObjectURL(url); }, 600000);
-      return;
-    }
-    w.document.write('<!doctype html><html><head><meta charset="utf-8"><title>SMARTEL 신청서</title>' +
-      '<style>html,body{margin:0;height:100%}iframe{border:0;width:100vw;height:100vh}</style>' +
-      '</head><body>\n' +
-      '<iframe id="pv" src="'+url+'"></iframe>\n' +
-      '<script>\n' +
-      '  var f=document.getElementById("pv");\n' +
-      '  f.addEventListener("load",function(){try{f.contentWindow.focus();f.contentWindow.print();}catch(e){window.focus();window.print();}});\n' +
-      '  window.addEventListener("afterprint",function(){setTimeout(function(){window.close();},400);});\n' +
-      '<\/script>\n' +
-      '</script>
-</body></html>');
-    w.document.close();
+    var w = window.open(url, '_blank', 'noopener,noreferrer');
+    if(!w){ var a=document.createElement('a'); a.href=url; a.download='smartel.pdf'; document.body.appendChild(a); a.click(); a.remove(); }
     setTimeout(function(){ URL.revokeObjectURL(url); }, 600000);
-  }catch(e){
-    alert('PDF 생성 중 오류가 발생했습니다. 콘솔 로그를 확인하세요.');
-    console.error(e);
-  }
+  }catch(e){ alert('PDF 생성 중 오류가 발생했습니다. 콘솔 로그를 확인하세요.'); console.error(e); }
 }
 
   /* === 기존 버튼 id 그대로 사용 === */
@@ -654,7 +621,8 @@ header .centered img.logo{ height: 46px !important; }
     }, true);
   }
 })();
-
+</script>
+<script>
 /* 신규일 때는 통신사/번호이동 관련 필드를 FormData에서 제외(=disabled)하고 값도 비움.
    번호이동일 때만 다시 활성화. MVNO 선택 시에만 MVNO명 입력 활성화. */
 (function () {
@@ -711,9 +679,11 @@ header .centered img.logo{ height: 46px !important; }
   document.addEventListener('DOMContentLoaded', updateUI);
   updateUI();
 })();
+</script>
 
+<script>
 // Full I18N dictionary (legacy keys + Smartel new keys)
-window.I18N = window.I18N || {
+const I18N = {
   KR: {
     app_form:"가입신청서", partner_only:"판매점 전용",
     sec_plan:"요금제", plan:"요금제", sec_customer:"고객정보",
@@ -1224,7 +1194,8 @@ document.addEventListener('DOMContentLoaded', function(){
     return true;
   };
 
-
+</script> 
+<script>
 (function () {
   // 1) Netlify Functions 경로 (로컬 file:// 로 열었을 때도 동작하도록 절대경로 폴백)
   const FN_REL = '/.netlify/functions/generate_pdf';
@@ -1333,28 +1304,8 @@ document.addEventListener('DOMContentLoaded', function(){
         });
         window.addEventListener('afterprint', () => setTimeout(()=>window.close(), 400));
       <\/script>
-    
-<!-- SMARTEL final minimal rebinder START -->
-<script>
-(function(){
-  function rebind(id, fn){
-    var old = document.getElementById(id);
-    if(!old) return;
-    try{ old.onclick = null; old.removeAttribute('onclick'); }catch(e){}
-    var btn = old.cloneNode(true);
-    old.parentNode.replaceChild(btn, old);
-    btn.addEventListener('click', fn);
-  }
-  if (typeof window.onPrintPDF==='function') rebind('printBtn', window.onPrintPDF);
-  if (typeof window.onSavePDF==='function')  rebind('saveBtn',  window.onSavePDF);
-  console.log('[SMARTEL] PDF handlers ready (generate_pdf)');
-})();
-</script>
-<!-- SMARTEL final minimal rebinder END -->
-
-</script>
-</body>
-</html>`);
+    <\/script>
+</body></html>`);
     w.document.close();
     setTimeout(()=>URL.revokeObjectURL(url), 600000);
   });
@@ -1414,11 +1365,11 @@ document.addEventListener('DOMContentLoaded', function(){
   // use page's own validate() if present; otherwise always pass
   function runValidate(){ try { return (typeof window.validate === 'function') ? !!window.validate() : true; } catch(_){ return true; } }
 
-  async function onSavePDF(){
+  /* LEGACY_DISABLED async function onSavePDF(){
     try{
       setHiddenBirth();
       // compose YY/MM if card was chosen (optional fields)
-      var yy = (qs('#card_exp_year')||{}).value||'';
+      var yy = (qs('#card_exp_year')||{} */).value||'';
       var mm = (qs('#card_exp_month')||{}).value||'';
       var apExp = qs('#autopay_exp'); if(apExp && yy && mm) apExp.value = yy+'/'+mm;
       if(!runValidate()) { window.scrollTo({top:0, behavior:'smooth'}); return; }
@@ -1429,10 +1380,10 @@ document.addEventListener('DOMContentLoaded', function(){
     }catch(e){ alert('PDF 생성 중 오류가 발생했습니다.'); console.error(e); }
   }
 
-  async function onPrintPDF(){
+  /* LEGACY_DISABLED async function onPrintPDF(){
     try{
       setHiddenBirth();
-      var yy = (qs('#card_exp_year')||{}).value||'';
+      var yy = (qs('#card_exp_year')||{} */).value||'';
       var mm = (qs('#card_exp_month')||{}).value||'';
       var apExp = qs('#autopay_exp'); if(apExp && yy && mm) apExp.value = yy+'/'+mm;
       if(!runValidate()) { window.scrollTo({top:0, behavior:'smooth'}); return; }
@@ -1444,27 +1395,7 @@ document.addEventListener('DOMContentLoaded', function(){
         '</head><body>\n'+
         '<iframe id="pv" src="'+url+'"></iframe>\n'+
         '<script>\n  var f=document.getElementById("pv");\n  f.addEventListener("load",function(){try{f.contentWindow.focus();f.contentWindow.print();}catch(e){window.focus();window.print();}});\n  window.addEventListener("afterprint",function(){setTimeout(function(){window.close();},400);});\n<\/script>\n'+
-        '
-<!-- SMARTEL final minimal rebinder START -->
-<script>
-(function(){
-  function rebind(id, fn){
-    var old = document.getElementById(id);
-    if(!old) return;
-    try{ old.onclick = null; old.removeAttribute('onclick'); }catch(e){}
-    var btn = old.cloneNode(true);
-    old.parentNode.replaceChild(btn, old);
-    btn.addEventListener('click', fn);
-  }
-  if (typeof window.onPrintPDF==='function') rebind('printBtn', window.onPrintPDF);
-  if (typeof window.onSavePDF==='function')  rebind('saveBtn',  window.onSavePDF);
-  console.log('[SMARTEL] PDF handlers ready (generate_pdf)');
-})();
-</script>
-<!-- SMARTEL final minimal rebinder END -->
-
-</body>
-</html>');
+        '</body></html>');
       w.document.close();
       setTimeout(function(){ URL.revokeObjectURL(url); }, 600000);
     }catch(e){ alert('PDF 생성 중 오류가 발생했습니다.'); console.error(e); }
@@ -1472,11 +1403,11 @@ document.addEventListener('DOMContentLoaded', function(){
 
   // --- 4) Bind buttons (IDs preferred, fallback by label text) -------------
   function bind(el, fn){ if(el) el.addEventListener('click', function(ev){ ev.preventDefault(); fn(); }); }
-  bind(qs('#saveBtn'), onSavePDF);
-  bind(qs('#printBtn'), onPrintPDF);
+  /* LEGACY_BIND_DISABLED bind(qs('#saveBtn'), onSavePDF); */
+  /* LEGACY_BIND_DISABLED bind(qs('#printBtn'), onPrintPDF); */
   // Fallback: find by visible text (KR/EN)
-  if(!qs('#saveBtn')){ qsa('button, a').forEach(function(b){ if(/^(PDF 저장|Save PDF)$/i.test(b.textContent.trim())) bind(b, onSavePDF); }); }
-  if(!qs('#printBtn')){ qsa('button, a').forEach(function(b){ if(/^(인쇄|Print)$/i.test(b.textContent.trim())) bind(b, onPrintPDF); }); }
+  if(!qs('#saveBtn')){ qsa('button, a').forEach(function(b){ if(/^(PDF 저장|Save PDF)$/i.test(b.textContent.trim())) /* LEGACY_BIND_DISABLED bind(b, onSavePDF); }); */ }
+  if(!qs('#printBtn')){ qsa('button, a').forEach(function(b){ if(/^(인쇄|Print)$/i.test(b.textContent.trim())) /* LEGACY_BIND_DISABLED bind(b, onPrintPDF); }); */ }
 
   // --- 5) Guard against rare “code leaking as plain text” at the page bottom
   function cleanupLeak(){
@@ -1494,7 +1425,8 @@ document.addEventListener('DOMContentLoaded', function(){
   if(document.readyState === 'loading') document.addEventListener('DOMContentLoaded', cleanupLeak); else cleanupLeak();
   setTimeout(cleanupLeak, 800); // run once more after layout
 })();
-
+</script>
+<script>
 /* ===== SMARTEL: PDF 저장/인쇄 클라이언트 (고정 경로/메서드/에러표시) ===== */
 
 // 1) Netlify Functions endpoint — 반드시 generate_pdf 로 고정
@@ -1554,11 +1486,11 @@ async function generatePDFBlob() {
 }
 
 // 4) 저장
-async function onSavePDF(e) {
+/* LEGACY_DISABLED async function onSavePDF(e) {
   e.preventDefault();
   try {
     if (typeof validate === 'function' && !validate()) {
-      window.scrollTo({ top: 0, behavior: 'smooth' });
+      window.scrollTo({ top: 0, behavior: 'smooth' } */);
       return;
     }
     const blob = await generatePDFBlob();
@@ -1576,11 +1508,11 @@ async function onSavePDF(e) {
 }
 
 // 5) 인쇄
-async function onPrintPDF(e) {
+/* LEGACY_DISABLED async function onPrintPDF(e) {
   e.preventDefault();
   try {
     if (typeof validate === 'function' && !validate()) {
-      window.scrollTo({ top: 0, behavior: 'smooth' });
+      window.scrollTo({ top: 0, behavior: 'smooth' } */);
       return;
     }
     const blob = await generatePDFBlob();
@@ -1590,27 +1522,7 @@ async function onPrintPDF(e) {
     const w = window.open('about:blank','_blank','noopener,noreferrer');
     const doc = w.document;
     doc.open();
-    doc.write('<!doctype html><html><head><title>SMARTEL 신청서</title><meta charset="utf-8"></head><body style="margin:0;background:#111">
-<!-- SMARTEL final minimal rebinder START -->
-<script>
-(function(){
-  function rebind(id, fn){
-    var old = document.getElementById(id);
-    if(!old) return;
-    try{ old.onclick = null; old.removeAttribute('onclick'); }catch(e){}
-    var btn = old.cloneNode(true);
-    old.parentNode.replaceChild(btn, old);
-    btn.addEventListener('click', fn);
-  }
-  if (typeof window.onPrintPDF==='function') rebind('printBtn', window.onPrintPDF);
-  if (typeof window.onSavePDF==='function')  rebind('saveBtn',  window.onSavePDF);
-  console.log('[SMARTEL] PDF handlers ready (generate_pdf)');
-})();
-</script>
-<!-- SMARTEL final minimal rebinder END -->
-
-</body>
-</html>');
+    doc.write('<!doctype html><html><head><title>SMARTEL 신청서</title><meta charset="utf-8"></head><body style="margin:0;background:#111"></body></html>');
     doc.close();
 
     const iframe = doc.createElement('iframe');
@@ -1644,7 +1556,9 @@ window.addEventListener('DOMContentLoaded', () => {
   console.log('[SMARTEL] PDF handlers ready (generate_pdf)');
 });
 /* ===== /SMARTEL ===== */
+</script>
 
+<script>
 /* Autopay: bank/card toggle — make card fields truly optional for 'bank' */
 (function(){
   var els = {
@@ -1736,8 +1650,8 @@ window.addEventListener('DOMContentLoaded', () => {
   }
 
   // 4) 새 바인딩만 연결(존재하는 핸들러에만 붙임, 없으면 no-op)
-  bind(qs('#saveBtn'),  window.onSavePDF  || window.onPrintPDF || function(){});
-  bind(qs('#printBtn'), window.onPrintPDF || window.onSavePDF  || function(){});
+  /* LEGACY_BIND_DISABLED bind(qs('#saveBtn'),  window.onSavePDF  || window.onPrintPDF || function(){}); */
+  /* LEGACY_BIND_DISABLED bind(qs('#printBtn'), window.onPrintPDF || window.onSavePDF  || function(){}); */
 })();
 </script>
 <!-- SMARTEL single-bind patch END -->
@@ -1750,7 +1664,8 @@ window.addEventListener('DOMContentLoaded', () => {
   // 2) 4분마다 한 번씩 얕게 핑(콜드 방지)
   setInterval(()=>{ fetch('./.netlify/functions/generate_pdf', { method:'POST', body: JSON.stringify({__warmup:true}) }).catch(()=>{}); }, 4*60*1000);
 })();
-
+</script>
+<script>
 (function(){
   // 1) print/save 버튼의 inline onclick 제거(있다면)
   var pb = document.getElementById('printBtn');
@@ -1782,7 +1697,8 @@ window.addEventListener('DOMContentLoaded', () => {
     }
   }, true);
 })();
-
+</script>
+<script>
 (function(){
   // 이미 페이지에 getPdfBlobGuaranteed 가 있으면 재사용, 없으면 캡처본 사용
   async function getPdfBlobGuaranteed(){
@@ -1846,28 +1762,12 @@ window.addEventListener('DOMContentLoaded', () => {
     old.parentNode.replaceChild(btn, old);
     btn.addEventListener('click', fn);
   }
-  if (typeof window.onPrintPDF==='function') rebind('printBtn', window.onPrintPDF);
+  if (typeof window.onPrintPDF==='function') re/* LEGACY_BIND_DISABLED bind('printBtn', window.onPrintPDF); */
   if (typeof window.onSavePDF==='function')  rebind('saveBtn',  window.onSavePDF);
   console.log('[SMARTEL] PDF handlers ready (generate_pdf)');
 })();
 </script>
 <!-- SMARTEL final minimal rebinder END -->
-
-
-<!-- SMARTEL minimal rebinder -->
-<script>(function(){
-  function rebind(id, fn){
-    var el = document.getElementById(id);
-    if(!el) return;
-    try{ el.onclick=null; el.removeAttribute('onclick'); }catch(e){}
-    var btn = el.cloneNode(true);
-    el.parentNode.replaceChild(btn, el);
-    btn.addEventListener('click', fn);
-  }
-  if (typeof window.onPrintPDF==='function') rebind('printBtn', window.onPrintPDF);
-  if (typeof window.onSavePDF==='function')  rebind('saveBtn',  window.onSavePDF);
-  console.log('[SMARTEL] PDF handlers ready (generate_pdf)');
-})();</script>
 
 </body>
 </html>
