--- a/public/index.html
+++ b/public/index.html
@@ -427,6 +427,8 @@ async function onPrintPDF(e){
   window.addEventListener("afterprint",function(){ setTimeout(function(){ window.close(); }, 400); });
 <\/script>
 </script>
+<\/script>
+</script>
 </script>
 </script>
 </script>
@@ -1324,6 +1326,7 @@ document.addEventListener('DOMContentLoaded', function(){
         window.addEventListener('afterprint', () => setTimeout(()=>window.close(), 400));
       <\/script>
     <\/script>
+<\/script>
 </body></html>`);
     w.document.close();
     setTimeout(()=>URL.revokeObjectURL(url), 600000);
@@ -1776,6 +1779,7 @@ window.addEventListener('DOMContentLoaded', () => {
   var f=document.getElementById("pv");
   f.addEventListener("load",function(){try{f.contentWindow.focus();f.contentWindow.print();}catch(e){window.focus();window.print();}});
   window.addEventListener("afterprint",function(){ setTimeout(function(){ window.close(); }, 400); });
+<\/script>
 <\/script>
 </body></html>`);
         w.document.close();
