--- a/public/index.html
+++ b/public/index.html
@@ -1789,5 +1789,90 @@ window.addEventListener('DOMContentLoaded', () => {
   }catch(e){ console.error('[SMARTEL-fix] bootstrap failed:', e); }
 })();
 </script>
+
+<!-- SMARTEL safety-shim (save/print/lang/reset) - injected -->
+<script>
+(function(){
+  function ready(fn){
+    if(document.readyState === 'loading'){ document.addEventListener('DOMContentLoaded', fn); }
+    else { fn(); }
+  }
+  ready(function(){
+    var qs = function(sel, root){ return (root||document).querySelector(sel); };
+    function bindOnce(el, fn){
+      if(!el) return;
+      try { el.onclick = null; } catch(_) {}
+      el.addEventListener('click', function(ev){ ev.preventDefault(); fn(ev); });
+    }
+
+    function getPdfBlobGuaranteed(){
+      if(typeof window.generatePDFBlob === 'function') return window.generatePDFBlob();
+      return Promise.reject(new Error('generatePDFBlob is not defined'));
+    }
+
+    if(typeof window.onSavePDF !== 'function'){
+      window.onSavePDF = async function onSavePDF(e){
+        try{
+          var blob = await getPdfBlobGuaranteed();
+          if(!blob) throw new Error('Invalid PDF blob');
+          var url = URL.createObjectURL(blob);
+          var a = document.createElement('a');
+          a.href = url;
+          a.download = (document.title || 'SMARTEL') + '.pdf';
+          document.body.appendChild(a); a.click(); a.remove();
+          setTimeout(function(){ URL.revokeObjectURL(url); }, 60000);
+        }catch(err){
+          alert('PDF 생성 중 오류가 발생했습니다. 콘솔 로그를 확인하세요.');
+          console.error(err);
+        }
+      };
+    }
+
+    if(typeof window.onPrintPDF !== 'function'){
+      window.onPrintPDF = async function onPrintPDF(e){
+        try{
+          var blob = await getPdfBlobGuaranteed();
+          if(!blob) throw new Error('Invalid PDF blob');
+          var url = URL.createObjectURL(blob);
+          var w = window.open('', '_blank');
+          if(!w){ alert('팝업이 차단되었습니다. 팝업 허용 후 다시 시도하세요.'); return; }
+          w.document.write('<!doctype html><html><head><meta charset="utf-8"><title>SMARTEL 신청서</title></head><body style="margin:0"><iframe src="'+url+'" style="border:0;width:100vw;height:100vh"></iframe></body></html>');
+          w.document.close();
+          setTimeout(function(){ try{ w.focus(); w.print(); }catch(_){} }, 800);
+          setTimeout(function(){ URL.revokeObjectURL(url); }, 600000);
+        }catch(err){
+          alert('PDF 생성 중 오류가 발생했습니다. 콘솔 로그를 확인하세요.');
+          console.error(err);
+        }
+      };
+    }
+
+    bindOnce(qs('#saveBtn') || qs('button#saveBtn') || qs('a#saveBtn'), window.onSavePDF);
+    bindOnce(qs('#printBtn') || qs('button#printBtn') || qs('a#printBtn'), window.onPrintPDF);
+
+    var resetBtn = qs('#resetBtn') || qs('button#resetBtn') || qs('a#resetBtn');
+    if(resetBtn){
+      resetBtn.addEventListener('click', function(ev){
+        ev.preventDefault();
+        var f = qs('form');
+        if(f){ f.reset(); }
+      });
+    }
+
+    var chips = document.querySelectorAll('.chip[data-lang], [data-lang].chip');
+    chips.forEach(function(chip){
+      chip.addEventListener('click', function(){
+        var lang = (chip.dataset.lang || '').toLowerCase();
+        if(lang){ document.documentElement.setAttribute('lang', lang); }
+        if(typeof window.applyLang === 'function'){
+          try{ window.applyLang(chip.dataset.lang || lang); }catch(_){}
+        }
+      });
+      chip.style.pointerEvents = 'auto';
+      chip.style.cursor = 'pointer';
+    });
+  });
+})();
+</script>
 </body>
 </html>
