--- a/public/index.html
+++ b/public/index.html
@@ -1696,6 +1696,6 @@ window.addEventListener('DOMContentLoaded', () => {
 })();
 </script>
 <!-- SMARTEL final minimal rebinder END -->
-
+<script src="./smartel_pdf_bind_fix.js"></script>
 </body>
 </html>
