--- a/public/index.html
+++ b/public/index.html
@@ -1696,6 +1696,7 @@ window.addEventListener('DOMContentLoaded', () => {
 })();
 </script>
 <!-- SMARTEL final minimal rebinder END -->
+<script src="./smartel_fetch_map.js"></script>
 <script src="./smartel_pdf_host_patch.js"></script>
 <script src="./smartel_pdf_bind_fix_v2.js"></script>
 </body>
