--- a/public/index.html
+++ b/public/index.html
@@ -1707,7 +1707,6 @@ window.addEventListener('DOMContentLoaded', () => {
 <!-- SMARTEL final minimal rebinder END -->
 
 <script src="./smartel_transport_map.js"></script>
-<script src="./smartel_pdf_host_patch.js"></script>
-<script src="./smartel_pdf_bind_fix_v3.js"></script>
+<script src="./smartel-print-dropin.js"></script>
 </body>
 </html>
