--- a/public/index.html
+++ b/public/index.html
@@ -545,7 +545,7 @@ header .centered img.logo{ height: 46px !important; }
 // Full I18N dictionary (legacy keys + Smartel new keys)
 const I18N = {
   KR: {
-    app_form:"가입신청서", partner_only:"판매점 전용",
+    app_form:"후불 가입신청서", partner_only:"판매점 전용",
     sec_plan:"요금제", plan:"요금제", sec_customer:"고객정보",
     join_type_label:"가입유형", new:"신규", port:"번호이동",
     subscriber:"가입자명", birth:"생년월일", addr:"주소",
