--- a/public/index.html
+++ b/public/index.html
@@ -1225,8 +1225,8 @@ document.addEventListener('DOMContentLoaded', function(){
 })();
 </script>
 <!-- Paste this <script> block immediately BEFORE the closing <!-- SMARTEL 최종 PDF 저장/인쇄 핸들러 (중복 호출 방지용) -->
-
-
+</body>
+</html>
 </body> in your existing index.html -->
 
 
